--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -64,7 +64,7 @@ $transition_default: (all 0.2s ease-in-out);
 
 
 @import 'slides';
-@import 'framework';
+//@import 'framework';
 
 
 
@@ -101,4 +101,7 @@ $transition_default: (all 0.2s ease-in-out);
 .outline {
     background-color: transparent !important;
     border: 4px solid black;
+}
+.inline-block {
+  display: inline-block;
 }
